# Diploma-Implementations

./: .gitignore
aspnetcore/: .gitignore  Authentication.cs  Dockerfile  Program.cs  SchemaMigration.cs  appsettings.json  aspnetcore.csproj  codegen.ps1  docker-compose.yaml  run.ps1  scaffold.ps1
aspnetcore/BlogContext/: postgresContext.cs
aspnetcore/Controllers/: CommentController.cs  PostController.cs  SegmentController.cs  UserController.cs
aspnetcore/Models/: Comment.cs  DeleteCommentRequest.cs  DeletePostRequest.cs  Hyperlink.cs  IdResponse.cs  Image.cs  LoginRequest.cs  LogoutRequest.cs  NewComment.cs  NewPost.cs  Node.cs  Paragraph.cs  Post.cs  RegisterRequest.cs  SchemaMigration.cs  Segment.cs  SegmentRequest.cs  SegmentResponse.cs  SelfInformation.cs  ShortComment.cs  ShortNode.cs  ShortPost.cs  TextResponse.cs  User.cs
express/: .env  .gitignore  .todo  index.js  index.ts  package-lock.json  package.json  run.ps1  tsconfig.json  utility.js  utility.ts
flask/blog/: pyproject.toml  run.py
flask/blog/blog/: __main__.py
flask/blog/blog/comment/: comment.py  comment_logic.py
flask/blog/blog/data/: comment_data.py  database.py  post_data.py  segment_data.py  user_data.py
flask/blog/blog/post/: post.py  post_logic.py
flask/blog/blog/segment/: segment.py  segment_logic.py
flask/blog/blog/user/: user.py  user_logic.py
flask/blog/tests/: test_blog.py
jmeter-results/: Test.jmx
performance-test/: .gitignore  view.har
postgres-database/: .gitignore  database_with_data.sql  docker-compose.yaml  initialize_database.sql  pgdump.ps1  setup.py
(+498 files in other folders)
