[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Filip Strajnar <filip.strajnar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
asyncpg = "^0.26.0"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
